--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.1",
     "@mui/styled-engine-sc": "^6.1.1",
     "@mui/x-charts": "^7.17.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
